fix: header-size wrong on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -39,7 +39,6 @@ body {
   @include onmobile() {
     padding: 0 2rem;
     --top-margin: 0;
-    --header-size: var(--df-header-size);
   }
 }
 
